2003-08-12  David Hyatt  <hyatt@apple.com>

	Fix for 3373462, XML shows up as blank because the root is inline.  The fix is
	to just disallow inline roots.
	
        Reviewed by kocienda

        * khtml/css/cssstyleselector.cpp:

2003-08-11  David Hyatt  <hyatt@apple.com>

	Fix for 3349142, blocks inside inlines with generated content cause the generated
	content to get all screwed up, especially if you try to print.  This patch fixes
	generated content to be continuation-aware (and vice versa), so that the content
	behaves correctly when inlines get split.
	
        Reviewed by darin

        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_container.cpp:
        (RenderContainer::updatePseudoChild):
        * khtml/rendering/render_container.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::addChild):
        * khtml/rendering/render_inline.cpp:
        (RenderInline::isInlineContinuation):
        (RenderInline::addChildToFlow):
        (RenderInline::cloneInline):
        (RenderInline::splitInlines):
        * khtml/rendering/render_inline.h:
        * khtml/rendering/render_object.cpp:
        (RenderObject::continuation):
        (RenderObject::isInlineContinuation):
        * khtml/rendering/render_object.h:

2003-08-11  Darin Adler  <darin@apple.com>

        * kwq/KWQKHTMLPart.h: Fixed some small typo-ish strangenesses.

2003-08-08  David Hyatt  <hyatt@apple.com>

	Fix for 3368672, don't allow frames and framesets to be positioned or relpositioned.
	
        Reviewed by darin

        * ChangeLog:
        * khtml/rendering/render_box.cpp:
        (RenderBox::setStyle):
        * khtml/rendering/render_object.cpp:
        (RenderObject::requiresLayer):
        * khtml/rendering/render_object.h:

2003-08-07  David Hyatt  <hyatt@apple.com>

	Fix for 3368463, assert/crash on libraries.uc.edu page.  A stylesheet was making 
	a <p> a table-column, which is totally nonsensical.  Since this isn't supported in